--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2020-01-21  Johnathan Wong <jowong@bcgsc.ca>
+
+	* Release version 2.1.0
+	* Added support for RNA sequences.
+	* Updated stHashIterator to produce multiple hashes for each seeds.
+
 2017-03-08  Hamid Mohamadi <hmohamadi@bcgsc.ca>
 
 	* Automake version
