--- a/ChangeLog
+++ b/ChangeLog
@@ -1,8 +1,8 @@
 2020-01-21  Johnathan Wong <jowong@bcgsc.ca>
 
 	* Release version 2.1.0
-	* Added support for RNA sequences.
-	* Updated stHashIterator to produce multiple hashes for each seeds.
+	* Added support for RNA sequences
+	* Updated stHashIterator with the ability to produce multiple hashes for each seed
 
 2017-03-08  Hamid Mohamadi <hmohamadi@bcgsc.ca>
 
