Update citation file

--- a/CITATION.bib
+++ b/CITATION.bib
@@ -1,3 +1,18 @@
+@article{10.1093/bioinformatics/btac564,
+    author = {Kazemi, Parham and Wong, Johnathan and Nikolić, Vladimir and Mohamadi, Hamid and Warren, René L and Birol, Inanç},
+    title = "{ntHash2: recursive spaced seed hashing for nucleotide sequences}",
+    journal = {Bioinformatics},
+    volume = {38},
+    number = {20},
+    pages = {4812-4813},
+    year = {2022},
+    month = {08},
+    issn = {1367-4803},
+    doi = {10.1093/bioinformatics/btac564},
+    url = {https://doi.org/10.1093/bioinformatics/btac564},
+    eprint = {https://academic.oup.com/bioinformatics/article-pdf/38/20/4812/46535020/btac564.pdf},
+}
+
 @article{doi:10.1093/bioinformatics/btw397,
 author = {Mohamadi, Hamid and Chu, Justin and Vandervalk, Benjamin P. and Birol, Inanc},
 title = {ntHash: recursive nucleotide hashing},
